# marsh

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  run_act.sh  run_pytest.sh  run_tests_with_sysbox.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  other.md
.github/workflows/: pypi-publish.yml  release.yml  test.yml
samples/: bash_factory_sample.py  cmd_run_decorator_sample.py  command_expression_sample.py  dag_sample.py  docker_sample.py  py_interpreter_sample.py  remote_command.py  script_template.py  ssh_sample.py
src/marsh/: __init__.py  authentication.py  command_runner_decorators.py  exceptions.py  logger.py  pre_post_processors.py
src/marsh/bash/: __init__.py  bash_config.py  bash_grammar.py
src/marsh/core/: __init__.py  cmd_run_decorator.py  command_grammar.py  connector.py  executor.py  script.py
src/marsh/core/dag/: __init__.py  dag.py  node.py  result.py
src/marsh/dag/: dag.py  node.py  startable.py
src/marsh/docker/: __init__.py  docker_executor.py
src/marsh/processor_functions/: printers.py  redirections.py
src/marsh/ssh/: __init__.py  ssh_command_grammar.py  ssh_connector.py
src/marsh/utils/: __init__.py  list_utils.py  output_streams.py
tests/: test_processor_functions.py
tests/bash/: test_bash_factory.py  test_bash_grammar.py  test_bash_script.py
tests/core/: test_cmd_run_decorator.py  test_conveyor.py  test_executor.py  test_py_command_grammar.py
tests/dag/: test_dag_base.py  test_dags.py  test_node.py  test_startable.py
tests/docker/: fixtures.py  test_docker_command_executor.py  test_docker_command_grammar.py  test_docker_container.py
tests/ssh/: fixtures.py  test_ssh_command_grammar.py  test_ssh_connector.py  test_ssh_factory.py
tests/utils/: test_output_streams.py
