[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "marsh"
version = "0.1.0"
package-mode = true
description = "Lightweight, extensible Python library for building, managing, and executing command workflows."
authors = ["Cedric Anover <cedric.anover@hotmail.com>"]
readme = "README.md"
# packages = [{include = "marsh", from = "src"}]
exclude = [
    "tests/",
    "samples/"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fabric = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^7.0.0"  # Usage: `poetry run pflake8`
isort = "^5.13.2"
black = "^24.10.0"
fabric = {extras = ["pytest"], version = "^3.2.2"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
testcontainers = "^4.9.0"

[tool.flake8]
max-line-length = 120
ignore = ["E226", "E302", "E41", "E501", "W293"]
extend-ignore = []
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "venv",
    ".venv"
]

[tool.flake8.files]
include = ["src/**/*.py"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
#extend-exclude = '...'
