[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "marsh-lib"
version = "0.1.0"
#package-mode = true
description = "Lightweight, extensible Python library for building, managing, and executing command workflows."
authors = ["Cedric Anover <cedric.anover@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CedricAnover/marsh"
keywords = ["marsh", "marsh-lib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux"
]

packages = [{include = "marsh", from = "src"}]
exclude = [
    "tests/",
    "samples/"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fabric = "^3.2.2"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^7.0.0"  # Usage: `poetry run pflake8`
isort = "^5.13.2"
black = "^24.10.0"
fabric = {extras = ["pytest"], version = "^3.2.2"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
testcontainers = "^4.9.0"

[tool.flake8]
max-line-length = 120
ignore = ["E226", "E302", "E41", "E501", "W293"]
extend-ignore = []
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "venv",
    ".venv"
]

[tool.flake8.files]
include = ["src/**/*.py"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
#extend-exclude = '...'
